[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnalib = { path = "../rnalib" }
rnavis = { path = "../rnavis" }
egui = "0.20.1"
eframe = { version = "0.20.0", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence"
]}
native-dialog = "0.6.3"

[profile.release]
debug = true