[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnalib = { path = "../rnalib" }
egui = "0.20.1"
eframe = { version = "0.20.0", default-features = false, features = [
	"default_fonts",
	"glow"
]}
native-dialog = "0.6.3"
stringreader = "*"
mimalloc = { version = "0.1.17", default-features = false }
utf8-chars = "2.0.3"
concat-idents = "1.1.4"
const-str = "0.5.3"
tiny-skia = "0.6"
resvg = "0.23.0"
usvg = "0.23.0"
smol = "1.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"