[package]
name = "rnavis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.28.0"
tiny-skia = "0.8.2"
usvg = "0.28.0"
const-str = "0.5.3"
concat-idents = "1.1.4"
rnalib = { path="../rnalib" }

[profile.release]
debug = true